policies/examples/cilium-fqdn-egress.example.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jenkins-fqdn-egress
  namespace: apps
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jenkins
  egress:
    - toFQDNs:
        - matchName: github.com
        - matchName: api.github.com
        - matchPattern: "*.githubusercontent.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "22"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
